<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF"
    tools:context=".ScreenActivity">

    <ImageView
        android:id="@+id/ivBg"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:contentDescription="@string/descriptionImage"
        android:scaleType="centerCrop"
        android:src="@drawable/back" />

    <View
        android:id="@+id/viewGradient"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_alignBottom="@id/ivBg"
        android:background="@drawable/shadow_view" />


    <TextView
        android:id="@+id/tvUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:text="Hi, Username"
        android:textColor="#FFF"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextClock
        android:id="@+id/tvClock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvUsername"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:format24Hour="hh:mm a"
        android:textColor="#FFF"
        android:textSize="50sp"
        android:textStyle="bold"
        tools:text="12:00 AM" />

    <TextView
        android:id="@+id/tvCalender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvClock"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:shadowColor="#000"
        android:shadowRadius="2"
        android:text="17 September 2019"
        android:textColor="#FFF" />

    <androidx.cardview.widget.CardView
        android:id="@+id/card"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="220dp"
        android:layout_marginEnd="16dp"
        app:cardCornerRadius="30dp" >

        <RelativeLayout
            android:id="@+id/travello"
            android:layout_width="384dp"
            android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="Travello"
            android:fontFamily="cursive"
            android:textColor="#689F38"
            android:textSize="30sp" />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/card"
            android:layout_centerInParent="true"
            android:layout_marginTop="24dp"
            android:text="@string/badConnection"
            android:visibility="gone" />

        <com.github.ybq.android.spinkit.SpinKitView
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/spin_kit"
            style="@style/SpinKitView.ThreeBounce"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/card"
            android:layout_gravity="center"
            app:SpinKit_Color="@color/colorAccent" />

    <androidx.cardview.widget.CardView
        android:layout_marginTop="15dp"
        android:layout_marginLeft="15dp"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:id="@+id/cv1"
        android:onClick="Penerbangan"
        app:cardCornerRadius="25dp"
        android:layout_below="@+id/card">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/tiketpesawat"
                android:layout_margin="15dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Penerbangan"
                android:textStyle="bold"
                android:textSize="15sp"/>
        </LinearLayout>

    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:layout_marginTop="15dp"
        android:layout_marginLeft="25dp"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:layout_toRightOf="@+id/cv1"
        android:id="@+id/cv2"
        android:onClick="Hotel"
        app:cardCornerRadius="25dp"
        android:layout_below="@+id/card">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/hotel"
                android:layout_margin="15dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Hotel"
                android:textStyle="bold"
                android:textSize="15sp"/>
        </LinearLayout>

    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:layout_marginTop="15dp"
        android:layout_marginLeft="25dp"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:layout_toRightOf="@+id/cv2"
        android:id="@+id/cv3"
        android:onClick="Kereta"
        app:cardCornerRadius="25dp"
        android:layout_below="@+id/card">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/tiketkereta"
                android:layout_margin="15dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Kereta"
                android:textStyle="bold"
                android:textSize="15sp"/>
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_marginTop="15dp"
        android:layout_marginLeft="75dp"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:id="@+id/cv4"
        android:onClick="Kuliner"
        app:cardCornerRadius="25dp"
        android:layout_below="@+id/cv1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/kuliner"
                android:layout_margin="15dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Kuliner"
                android:textStyle="bold"
                android:textSize="15sp"/>
        </LinearLayout>

    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:layout_marginTop="15dp"
        android:layout_width="110dp"
        android:layout_toRightOf="@id/cv4"
        android:layout_marginRight="75dp"
        android:layout_marginLeft="25dp"
        android:layout_height="110dp"
        android:id="@+id/cv5"
        android:onClick="TiketBus"
        app:cardCornerRadius="25dp"
        android:layout_below="@+id/cv1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/tiketbus"
                android:layout_margin="15dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/TiketBus"
                android:textStyle="bold"
                android:textSize="15sp"/>
        </LinearLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>